--- a/index.html
+++ b/index.html
@@ -35,14 +35,19 @@
 
     @media print {
       @page {
-        margin: 0;
-        size: auto;
+        margin: 0 !important;
+        padding: 0 !important;
+        size: A4;
       }
 
+      html,
       body {
-        background-color: white !important;
-        margin: 0;
-        padding: 0;
+        margin: 0 !important;
+        padding: 0 !important;
+        width: 210mm !important;
+        background: white !important;
+        -webkit-print-color-adjust: exact !important;
+        print-color-adjust: exact !important;
       }
 
       .no-print {
@@ -54,30 +59,34 @@
         margin: 0 !important;
       }
 
+      /* Strip all layout wrappers */
+      #root>div,
+      #root>div>main,
+      #root>div>main>div,
+      #root>div>main>div>div {
+        margin: 0 !important;
+        padding: 0 !important;
+        max-width: none !important;
+        min-height: 0 !important;
+        height: auto !important;
+      }
+
       .print-container {
         transform: none !important;
         scale: 1 !important;
         margin: 0 !important;
         padding: 0 !important;
         width: 210mm !important;
+        min-height: 0 !important;
         box-shadow: none !important;
+        border: none !important;
+        page-break-inside: avoid;
       }
 
       * {
         -webkit-print-color-adjust: exact !important;
         print-color-adjust: exact !important;
       }
-
-      html,
-      body {
-        margin: 0;
-        padding: 0;
-        height: 100%;
-      }
-
-
-
-
     }
 
     /* Custom animations */
