--- a/index.html
+++ b/index.html
@@ -82,44 +82,32 @@
         border: none !important;
       }
 
-      /* Hide the table structure, use fixed positioning instead */
+      /* Native Table Layout for Print
+         This ensures the header (thead) and footer (tfoot) repeat on every page
+         and occupy space, preventing content overlap. */
       .cv-print-table {
-        display: block !important;
+        display: table !important;
         width: 100% !important;
       }
 
-      .cv-print-table tbody,
-      .cv-print-table tr,
+      .cv-print-table thead {
+        display: table-header-group !important;
+      }
+
+      .cv-print-table tfoot {
+        display: table-footer-group !important;
+      }
+
+      .cv-print-table tbody {
+        display: table-row-group !important;
+      }
+
+      .cv-print-table tr {
+        display: table-row !important;
+      }
+
       .cv-print-table td {
-        display: block !important;
-        padding: 0 !important;
-        border: none !important;
-      }
-
-      /* Fixed header: top of every page */
-      .cv-print-thead {
-        display: block !important;
-        position: fixed !important;
-        top: 0 !important;
-        left: 0 !important;
-        width: 210mm !important;
-        z-index: 1000 !important;
-      }
-
-      /* Fixed footer: bottom of every page */
-      .cv-print-tfoot {
-        display: block !important;
-        position: fixed !important;
-        bottom: 0 !important;
-        left: 0 !important;
-        width: 210mm !important;
-        z-index: 1000 !important;
-      }
-
-      /* Body content padding to avoid overlap with fixed header (160px) and footer (80px) */
-      .cv-print-body {
-        padding-top: 170px !important;
-        padding-bottom: 100px !important;
+        display: table-cell !important;
       }
 
       * {
