--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       @page {
         margin: 0 !important;
         padding: 0 !important;
-        size: A4;
+        size: A4 portrait !important;
       }
 
       html,
@@ -45,6 +45,8 @@
         margin: 0 !important;
         padding: 0 !important;
         width: 210mm !important;
+        height: 297mm !important;
+        overflow: hidden !important;
         background: white !important;
         -webkit-print-color-adjust: exact !important;
         print-color-adjust: exact !important;
