Refine CV UI and DOCX export styles (Garet 41.1px, Agrandir 8px, skill pills 12px)

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&family=Inter:wght@400;500;600;700&display=swap"
     rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/agrandir" rel="stylesheet">
   <script src="https://accounts.google.com/gsi/client" async defer></script>
   <script src="https://apis.google.com/js/api.js" async defer></script>
   <style>
@@ -24,13 +25,11 @@
     }
 
     .font-garet {
-      font-family: 'Montserrat', sans-serif;
-      font-weight: 700;
+      font-family: 'Garet', sans-serif;
     }
 
     .font-agrandir {
-      font-family: 'Inter', sans-serif;
-      font-weight: 400;
+      font-family: 'Agrandir', sans-serif;
     }
 
     @media print {
