--- a/index.html
+++ b/index.html
@@ -115,7 +115,6 @@
         height: 140px !important;
         /* Matches header height */
         padding-bottom: 20px !important;
-        /* Space after header */
         background: white !important;
       }
 
@@ -124,11 +123,24 @@
         background: white !important;
       }
 
+      .cv-print-footer-fixed {
+        display: block !important;
+        position: fixed !important;
+        bottom: 0 !important;
+        left: 0 !important;
+        width: 210mm !important;
+        height: 80px !important;
+        z-index: 9999 !important;
+      }
 
       * {
         -webkit-print-color-adjust: exact !important;
         print-color-adjust: exact !important;
       }
+    }
+
+    .cv-print-footer-fixed {
+      display: none;
     }
 
     /* Custom animations */
