--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
         margin: 0 !important;
         padding: 0 !important;
         width: 210mm !important;
-        height: auto !important;
+        height: 100vh !important;
+        min-height: 100vh !important;
         background: white !important;
         -webkit-print-color-adjust: exact !important;
         print-color-adjust: exact !important;
